# reasoning-cyber-certification

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: tests.yml
app/: streamlit_app.py
app/eval/: cases.jsonl  foundry_dataset.jsonl
app/src/cybersecurity_readiness/: __init__.py  agents.py  config.py  constants.py  evaluation.py  hosted_api.py  lab_scoring.py  loader.py  retrieval.py  safety.py  schemas.py  workflow.py
app/src/cybersecurity_readiness/foundry/: __init__.py  agents.py  client.py  prompts.py
app/tests/: test_agents.py  test_config.py  test_evaluation.py  test_foundry.py  test_hosted_api.py  test_labs.py  test_orchestration.py  test_phase8_packaging.py  test_retrieval.py  test_safety.py  test_schemas.py  test_workflow.py
data/synthetic/: certification_paths.json  learners.json  team_readiness.json  teams.json  work_signals.json
data/synthetic/knowledge_docs/: sources.json
data/synthetic/labs/: kql_interpretation.json  phishing_triage.json  suspicious_signin.json  vulnerability_prioritization.json
docs/: architecture.md  data-and-safety.md  demo-script.md  evaluation-report.md  evaluation.md  foundry-evaluation.md  hosted-agent-deployment.md  live-foundry-setup.md  sources.md
scripts/: build_hosted_agent_image.ps1  check_live_foundry.ps1  export_knowledge_docs.ps1  push_acr_image.ps1  run_demo.ps1  run_eval.ps1  run_hosted_agent_container.ps1  run_hosted_api.ps1  run_tests.ps1
(+17 files in other folders)
