[project]
name = "reasoning-cyber-certification"
version = "0.1.0"
description = "Phase 1 deterministic local skeleton for the Agents League Reasoning track."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.10,<3",
  "streamlit>=1.41,<2"
]

[tool.pytest.ini_options]
pythonpath = ["app/src"]
testpaths = ["app/tests"]
addopts = "-q"

